style: adjust font-size for responsiveness and fix img title collapse issue

--- a/client/src/styles/base/_global.scss
+++ b/client/src/styles/base/_global.scss
@@ -12,6 +12,12 @@ body {
   color: $color-white;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .d-none {
   display: none;
 }
