--- a/client/src/styles/base/_variables.scss
+++ b/client/src/styles/base/_variables.scss
@@ -7,4 +7,6 @@ $color-primary: #4A52FF;
 $color-hover-bg: $color-primary;
 
 /* Media Queries Breakpoints */
+$breakpoint-mobile: 480px;
 $breakpoint-tablet: 768px;
+$breakpoint-desktop: 1024px;
