--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -10,6 +10,8 @@
 .main {
   background-color: $color-background;
   padding: 6em 4.4em;
+  height: 100vh;
+  overflow: auto;
 
   &__title {
     font-weight: 400;
@@ -24,7 +26,8 @@
   border: 0;
   border-radius: 25px;
   padding: 0.5em 1.25em;
-  margin-top: 1.25em;
+  margin-top: 2em;
+  cursor: pointer;
 }
 
 .grid {
@@ -49,6 +52,7 @@
       left: 0;
       padding: 1.2em;
       display: flex;
+      flex-direction: column;
       @include full-size;
       @include rounded-corners;
       transition-property: background-color;
@@ -59,13 +63,39 @@
         background: $color-hover-bg;
       }
 
-      h3 {
-        font-size: 1.25em;
-        font-weight: 400;
-      }
+      &__text__container {
+        overflow: hidden;
 
-      p {
-        margin-top: 2em;
+        h3 {
+          font-size: 1.25em;
+          font-weight: 400;
+
+          @media screen and (min-width: $breakpoint-mobile) {
+            font-size: 1.5em;
+          }
+
+          @media screen and (min-width: $breakpoint-tablet) {
+            font-weight: 400;
+          }
+
+          @media screen and (min-width: $breakpoint-desktop) {
+            font-size: 1.25em;
+          }
+
+        }
+
+        p {
+          margin-top: 2em;
+          font-size: 1em;
+
+          @media screen and (min-width: $breakpoint-mobile) {
+            font-size: 1.2em;
+          }
+
+          @media screen and (min-width: $breakpoint-desktop) {
+            font-size: 1em;
+          }
+        }
       }
 
       button {
@@ -74,11 +104,12 @@
         cursor: pointer;
         align-self: flex-end;
         padding: 0.5em 0.5em;
+        margin-top: auto;
       }
     }
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $breakpoint-tablet) {
     &__image-tall {
       grid-row: span 2 / auto;
     }
